# course_work_3

./: .gitignore  README.md  config.py  pyproject.toml
tests/: test_func.py  test_operations.json
utils/: func.py  main.py
