[tool.poetry]
name = "course-work-3"
version = "0.1.0"
description = ""
authors = ["Marcel Dio <marceldio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest-cov = "^5.0.0"
example = "^0.1.0"
pytest = "^8.1.1"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"
colorama = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
